--- a/bot/docker-compose.yml
+++ b/bot/docker-compose.yml
@@ -4,7 +4,7 @@ version: '3'
 services:
  bot:
    build: .
-   image: telebot27
+   image: gcr.io/netcracker-devops/telebot28
    restart: always
    ports:
      # Service will be accessible on the host at port 9090.
