--- a/code/docker-compose.yml
+++ b/code/docker-compose.yml
@@ -4,12 +4,12 @@ version: '3'
 services:
  bot:
    build: .
-   image: gcr.io/netcracker-devops/telebot
+   image: gcr.io/netcracker-devops/telebot:${BUILD_NUMBER}
    restart: always
    ports:
      # Service will be accessible on the host at port 9090.
      - "8080:${PORT:-8080}"
-   imagePullPolicy: Always
+#   imagePullPolicy: Always
    environment:
       - TELEGRAM_BOT_TOKEN=1804011613:AAG1DqIdMqRiwCxgVTL_9kWzbp8ecJC3HmY
       - TELEGRAM_ADMIN_ID=xxx
