--- a/code/docker-compose.yml
+++ b/code/docker-compose.yml
@@ -4,7 +4,7 @@ version: '3'
 services:
  bot:
    build: .
-   image: gcr.io/netcracker-devops/telebot:${BUILD_NUMBER}
+   image: gcr.io/netcracker-devops/telebot
    restart: always
    ports:
      # Service will be accessible on the host at port 9090.
