add cred kuber2

--- a/deployment.yaml
+++ b/deployment.yaml
@@ -15,7 +15,8 @@ spec:
     spec:
       containers:
         - name : telebot
-          image: gcr.io/netcracker-devops/telebot:latest
+          image: gcr.io/netcracker-devops/telebot34:latest
+          imagePullPolicy: Always
           ports:
             - containerPort: 80
 
