--- a/bot/requirements.txt
+++ b/bot/requirements.txt
@@ -1,126 +1,5 @@
-apturl==0.5.2
-astunparse==1.6.3
-async-timeout==3.0.1
-attrs==21.2.0
-Babel==2.9.1
-bcrypt==3.1.7
-blinker==1.4
-blis==0.7.4
-Brlapi==0.7.0
-cachetools==4.2.2
-catalogue==2.0.4
-certifi==2021.5.30
-chardet==3.0.4
-click==7.1.2
-colorama==0.4.3
-command-not-found==0.3
-crcmod==1.7
-cryptography==2.8
-cupshelpers==1.0
-cymem==2.0.5
-dbus-python==1.2.16
-defer==1.0.6
-distro==1.4.0
-distro-info===0.23ubuntu1
-dnspython==1.16.0
-duplicity==0.8.12.0
-entrypoints==0.3
-fasteners==0.14.1
-flatbuffers==1.12
-future==0.18.2
-gast==0.4.0
-google-auth==1.31.0
-google-auth-oauthlib==0.4.4
-google-pasta==0.2.0
-grpcio==1.34.1
-h5py==3.1.0
-httplib2==0.14.0
-idna==2.8
-Jinja2==3.0.1
-joblib==1.0.1
-keras-nightly==2.5.0.dev2021032900
-Keras-Preprocessing==1.1.2
-keyring==18.0.1
-language-selector==0.1
-launchpadlib==1.10.13
-lazr.restfulclient==0.14.2
-lazr.uri==1.0.3
-lockfile==0.12.2
-louis==3.12.0
-macaroonbakery==1.3.1
-Mako==1.1.0
-Markdown==3.3.4
-MarkupSafe==2.0.1
-monotonic==1.5
-multidict==5.1.0
-murmurhash==1.0.5
-netifaces==0.10.4
+aiogram==2.13
+numpy==1.20.3
 nltk==3.6.2
-numpy==1.19.5
-oauthlib==3.1.0
-olefile==0.46
-opt-einsum==3.3.0
-packaging==20.9
-paramiko==2.6.0
-pathy==0.5.2
-pexpect==4.6.0
-Pillow==7.0.0
-preshed==3.0.5
-protobuf==3.17.3
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-pycairo==1.16.2
-pycrypto==2.6.1
-pycups==1.9.73
-pydantic==1.7.4
-PyGObject==3.36.0
-pyinstaller==4.3
-pyinstaller-hooks-contrib==2021.1
-PyJWT==1.7.1
-pymacaroons==0.13.0
-PyNaCl==1.3.0
-pyparsing==2.4.7
-pyRFC3339==1.1
-python-apt==2.0.0+ubuntu0.20.4.4
-python-dateutil==2.7.3
-python-debian===0.1.36ubuntu1
-pytz==2019.3
-pyxdg==0.26
-PyYAML==5.3.1
-regex==2021.4.4
-reportlab==3.5.34
-requests==2.22.0
-requests-oauthlib==1.3.0
-requests-unixsocket==0.2.0
-rsa==4.7.2
-SecretStorage==2.3.1
-simplejson==3.16.0
-six==1.15.0
-smart-open==3.0.0
-spacy-legacy==3.0.5
-srsly==2.4.1
-ssh-import-id==5.10
-systemd-python==234
-tensorboard==2.5.0
-tensorboard-data-server==0.6.1
-tensorboard-plugin-wit==1.8.0
-tensorflow==2.5.0
-tensorflow-estimator==2.5.0
-termcolor==1.1.0
-thinc==8.0.3
-tqdm==4.61.0
-typer==0.3.2
-typing-extensions==3.7.4.3
-ubuntu-advantage-tools==20.3
-ubuntu-drivers-common==0.0.0
-ufw==0.36
-unattended-upgrades==0.1
-urllib3==1.25.8
-usb-creator==0.3.7
-vboxapi==1.0
-wadllib==1.3.3
-wasabi==0.8.2
-Werkzeug==2.0.1
-wrapt==1.12.1
-xkit==0.0.0
-yarl==1.6.3
+h5py==2.10.0
+tensorflow==1.15
