added checker & compose volume & commented out Jenkinsfile

--- a/code/docker-compose.yml
+++ b/code/docker-compose.yml
@@ -15,7 +15,7 @@ services:
       - TELEGRAM_ADMIN_ID=xxx
    volumes:
       - ./src:/src
-      - /var/lib/jenkins/config.py:/usr/src/app/config.py
+      - /var/lib/jenkins/workspace/test_telebot/config.py:/usr/src/app/config.py
 #      - /var/run/docker.sock:/var/run/docker.sock
    tty: true
    environment:
