added telekuber image

--- a/deployment.yaml
+++ b/deployment.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
         - name : telebot
-          image: gcr.io/netcracker-devops/telebot:latest
+          image: gcr.io/netcracker-devops/telekuber:latest
           imagePullPolicy: Always
           ports:
             - containerPort: 80
@@ -59,3 +59,12 @@ spec:
       port      : 80  # Port on Load Balancer
       targetPort: 80  # Port on Pod
   type: LoadBalancer
+
+#---
+#apiVersion: v1
+#kind: Secret
+#metadata:
+#  name: config-kuber
+#type:   Opaque
+#date: 
+
