return compose up

--- a/deployment.yaml
+++ b/deployment.yaml
@@ -19,13 +19,13 @@ spec:
           imagePullPolicy: Always
           ports:
             - containerPort: 80
-          volumeMounts:
-             - name: config-kuber
-               mountPath: /usr/src/app                           
-      volumes:
-        - name: config-kuber
-          hostPath:
-              path: /var/lib/jenkins/workspace/test_telebot/config_k8s.py
+#          volumeMounts:
+ #            - name: config-kuber
+  #             mountPath: /usr/src/app/config_k8s.py                           
+   #   volumes:
+    #    - name: config-kuber
+     #     hostPath:
+      #        path: /var/lib/jenkins/workspace/test_telebot/config_k8s.py
   #        persistentVolumeClaim:
   #            claimName: config-kuber-claim
     #   configMap:
