--- a/deployment.yaml
+++ b/deployment.yaml
@@ -17,17 +17,17 @@ spec:
         - name : telebot
           image: gcr.io/netcracker-devops/telebot:latest
           imagePullPolicy: Always
-          command: [ "/bin/sh", "-c", "cp /var/lib/jenkins/workspace/test_telebot/config_k8s.py /usr/src/app/config_k8s.py" ]
-          ports:
-            - containerPort: 80
-          volumeMounts:
-            - name: my-config
-              mountPath: /usr/src/app/config_k8s.py
-      volumes:
-        - name: my-config
-          configMap:
-              name: my-config
-      restartPolicy: Always
+      #    command: [ "/bin/sh", "-c", "cp /var/lib/jenkins/workspace/test_telebot/config_k8s.py /usr/src/app/config_k8s.py" ]
+      #    ports:
+      #      - containerPort: 80
+      #    volumeMounts:
+      #      - name: my-config
+      #        mountPath: /usr/src/app/config_k8s.py
+      #volumes:
+      #  - name: my-config
+      #    configMap:
+      #        name: my-config
+      #restartPolicy: Always
 
 
     #        - mountPath: /usr/src/app/config_k8s.py
